tests/paczka1/fuzzy1/69966660.err
Error in line 9: *O1FUGy2 S615 44,1
Error in line 10: 9O1FUGy2 A359 53,7
Error in line 8: RoGLV7t A408 58,2
Error in line 24: JwmWQx4bxx S963 124,8
Error in line 23: A408 A408 63,8
